tests/resolver/test-2.nbl
mut test = "test";
{
    mut test = test; // error
}
